--- a/index.html
+++ b/index.html
@@ -29,20 +29,66 @@
             <div class="author-img">
                 <img src="./images/person.png" alt="">
             </div>
-            <div class="author-description">
-                <h1 class="author-details">My failures of previous year</h1>
-            <p>Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of <br> classical
-                Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.</p>
-            <p>Contrary to popular belief, is not simply. <br>
-                Contrary to popular belief. <br>
-                Contrary to popular , is not simply. <br>
-                Contrary to popular belief, is not simply. <br>
-                Contrary to popular simply. <br> </p>
+            <div class="author-details">
+                <h1 class="author-title">My failures of <br> previous year</h1>
+                <p class="author-description">Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It
+                    has roots in a piece of <br> classical
+                    Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.</p>
+                <p> &check; Contrary to popular belief, is not simply. <br></p>
+                <p> &check; Contrary to popular belief. <br></p>
+                <p> &check; Contrary to popular , is not simply. <br></p>
+                <p> &check; Contrary to popular belief, is not simply. <br></p>
+                <p> &check; Contrary to popular simply. <br></p>
             </div>
         </div>
     </main>
+    <!-- footer-section -->
     <footer>
-
+        <div class="plans-container">
+        <h1 class="footer-title">MY PLans</h1>
+        <div class="plans-title">
+            <div>
+                <img src="images/icons/web.png" alt="">
+                <h1>Web DEvelopment</h1>
+                <h3>i want to start</h3>
+            </div>
+            <div>
+                <img src="images/icons/js.png" alt="">
+                <h1>Javaskript</h1>
+                <h3>i want to learn</h3>
+            </div>
+            <div>
+                <img src="images/icons/smoke.png" alt="">
+                <h1>Smoke Habit</h1>
+                <h3>i want to stop</h3>
+            </div>
+            <div>
+                <img src="images/icons/ecom.png" alt="">
+                <h1>Ecommerce</h1>
+                <h3>i want to develop</h3>
+            </div>
+        </div>
+        </div>
+        <div class="motivated-box" >
+            <h1 class="box-title" >Always keep a positibe mind  set</h1>
+            <button class="m-btn" >Call Now</button>
+        </div>
+        <div class="future-section">
+            <div>
+            <h1>Future</h1>
+            <p>There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
+            <h3>Email : info@gmail.com</h3>
+            <h3>PHone : 01854657776</h3>
+                <img src="./images/icons/fb.png" alt="">
+                <img src="./images/icons/twitter.png" alt="">
+                <img src="./images/icons/youtube.png" alt="">
+            </div>
+            <div>
+                <h2>Subscribe</h2>
+                <input type="Email" name="Enter Your Email" id="Enter Your Email">
+                <button>Subscribe</button>
+            </div>
+        </div>
     </footer>
 </body>
 
